--- a/List.ipynb
+++ b/List.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMerK+479ue8jPokKZ/5ldz",
+      "authorship_tag": "ABX9TyNf2WzEnayTPipyKuOrFwMo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -319,13 +319,115 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Just Break**"
+      ],
       "metadata": {
-        "id": "bg_m_yhiydzu"
+        "id": "mcW0TpRHzEgA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_devices = [\"Keyboard\",\"Mouse\",\"Scanner\",\"Mic\",\"Joystick\"]\n",
+        "output_devices = [\"Monitor\",\"Printer\",\"Speaker\",\"Headphone\"]\n",
+        "set_up = input_devices + output_devices #Merging two list\n",
+        "print(set_up)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bg_m_yhiydzu",
+        "outputId": "827cb278-1511-4a43-ce21-540c8ea8ee40"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Keyboard', 'Mouse', 'Scanner', 'Mic', 'Joystick', 'Monitor', 'Printer', 'Speaker', 'Headphone']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len = len(set_up)\n",
+        "print(len)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rfElTlSX0xcx",
+        "outputId": "8d0e5e9b-0214-492d-9a0a-632ab956886e"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"Printer\" in set_up #To check whether the element is present in the list or not"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gPnB_3my2J2G",
+        "outputId": "924e140e-2f9b-429f-b607-614d65066ff3"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"Water\" in set_up #If it is not present then it will return False"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9mSPctfF2bsE",
+        "outputId": "af61d5f5-7fdd-45de-91e8-84ca9821dcce"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     }
   ]
 }
